Fix alignment of product images/description

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ a {
 .info-section .product-img-and-descript {
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-end;
+    align-items: flex-start;
     padding: 0;
 }
 
@@ -117,19 +117,10 @@ a {
 .pairing {
     display: flex;
     flex-direction: column;
-    width: 100px;
+    width: 150px;
     margin-top: 2em;
-    align-items: stretch;
+    align-items: center;
 }
-
-
-/* .frame {
-    flex-grow: 2;
-    border: 3.5px solid #3882F6;
-    border-radius: .6em;
-    width: 100px;
-    height: 100px;
-} */
 
 .pairing .frame {
     margin-bottom: .3em;
@@ -137,13 +128,14 @@ a {
 }
 
 .frame img {
-    max-width: 100%;
-    max-height: 100px;
-    /* height: auto; */
+    /* max-width: 100%;
+    max-height: 100px; */
+    width:  100%;
+    height: 110px;
+    object-fit: scale-down;
 }
 
 .pairing .description {
-    flex-grow: 1;
     text-align: center;
     flex: 1;
 }
